--- a/src/app/admin/ingreso/detalle-ingreso/detalle-ingreso.component.html
+++ b/src/app/admin/ingreso/detalle-ingreso/detalle-ingreso.component.html
@@ -37,9 +37,9 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="card">
-                            <img [src]="url+'/uploads/ingresos/factura/'+ingreso.factura" alt="">
+                            <img [src]="url+'/uploads/facturas/'+ingreso.factura" alt="">
                             <div class="card-footer">
-                                <a [attr.href]="url+'/uploads/ingresos/factura/'+ingreso.factura" class="btn btn-success btn-block btn-sm">Descargar</a>
+                                <a [attr.href]="url+'/uploads/facturas/'+ingreso.factura" class="btn btn-success btn-block btn-sm">Descargar</a>
                             </div>
                         </div>
 
