--- a/src/app/admin/ingreso/index-ingreso/index-ingreso.component.html
+++ b/src/app/admin/ingreso/index-ingreso/index-ingreso.component.html
@@ -188,7 +188,7 @@
                                                         <a [routerLink]="['/dashboard/ingresos/detalle/',item._id]" class="btn btn-dark btn-icon">
                                                             <i class="czi-basket"></i> &nbsp; Detalles
                                                         </a>
-                                                        <a target="_blank" [attr.href]="url+'/uploads/ingresos/factura/'+item.factura" class="btn btn-accent btn-icon">
+                                                        <a target="_blank" [attr.href]="url+'/uploads/facturas/'+item.factura" class="btn btn-accent btn-icon">
                                                             <i class="czi-document"></i> &nbsp; Factura
                                                         </a>
 
