--- a/src/app/admin/proucto/prod-index/prod-index.component.html
+++ b/src/app/admin/proucto/prod-index/prod-index.component.html
@@ -67,7 +67,7 @@
                             <tr *ngFor="let producto of productos |  paginate: { itemsPerPage: count, currentPage: p }">
                                 <td class="text-center">
                                     <!-- <img [src]="producto.img | imagenPipe: 'productos'" class="img-responsive avatar" alt="{{producto.titulo}}"> -->
-                                    <img [routerLink]="['/dashboard/producto/edit',producto._id]" [src]="producto.img | imagenPipe: 'productos'" class="avatar cursor" alt="{{producto.titulo}}">
+                                    <img [routerLink]="['/dashboard/producto/edit',producto._id]" [src]="producto.poster | imagenPipe: 'productos'" class="avatar cursor" alt="{{producto.titulo}}">
                                 </td>
                                 <td>{{producto.titulo}}</td>
                                 <td>
