--- a/src/app/admin/curso/video-edit/video-edit.component.html
+++ b/src/app/admin/curso/video-edit/video-edit.component.html
@@ -6,31 +6,52 @@
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
-                <form class="form p-t-20 form-horizontal form-material" #videoForm="ngForm" (submit)="updateCurso(videoForm)">
+                <form class="form p-t-20 form-horizontal form-material" [formGroup]="videoForm"  (submit)="updateCurso()">
+                    <div class="form-group">
+                        <label for="select-input" style="line-height: 2.2;">Curso <span class="required">*</span></label>
+                        <select class="form-control " formControlName="curso"  >
+                            <option disabled  value="seleccione">SELECCIONAR</option>
+                            <option *ngFor="let item of cursos" [value]="item._id" >{{item.titulo}}</option>
+                         </select>
+                    </div>
                     <div class="form-group">
                         <label for="exampleInputuname">Titulo</label>
                         <div class="input-group">
 
-                            <input type="text" [(ngModel)]="titulo" name="titulo" class="form-control" id="exampleInputuname" placeholder="titulo">
+                            <input type="text" formControlName="titulo" class="form-control" id="exampleInputuname" placeholder="titulo">
                         </div>
                     </div>
                     <div class="form-group row align-items-center">
                         <label class=" col-form-label font-weight-medium" for="text-input">video de youtube</label>
                         <div class="col-md-10">
-                            <textarea class="form-control" type="text" placeholder="Codigo de insercion de vídeo." [(ngModel)]="video" name="video" required></textarea>
+                            <input type="text" formControlName="urlYoutube" class="form-control" id="exampleInputuname" placeholder="urlYoutube">
 
                         </div>
                     </div>
+                    <div class="form-group row align-items-center">
+                        <label class=" col-form-label font-weight-medium" for="text-input">video de vimeo</label>
+                        <div class="col-md-10">
+                            <input type="text" formControlName="urlVimeo" class="form-control" id="exampleInputuname" placeholder="urlYoutube">
 
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="select-input">Publicado?</label>
+                        <select class="form-control " formControlName="status">
+                      <option  disabled value="">SELECCIONAR</option>
+                      <option  value="Activo">Activo</option>
+                      <option  value="Desactivado">Desactivado</option>
 
-                    <button type="submit" [disabled]="videoForm.invalid" class="btn btn-success waves-effect waves-light m-r-10 btn-block">
+                  </select>
+                    </div>
+                    <button type="submit"  class="btn btn-success waves-effect waves-light m-r-10 btn-block">
              <i class="fa fa-save"></i> Guardar cambios
             </button>
                 </form>
             </div>
         </div>
     </div>
-    <div class="col-md-6 animated fadeIn fast" *ngIf="videoSeleccionado">
+    <div class="col-md-6 animated fadeIn fast" >
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Video</h4>
